--- a/main.ipynb
+++ b/main.ipynb
@@ -195,22 +195,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Se  debe  crear  un  modelo  robado  a  partir  del  modelo  original,  entrenado  con  data completamente aleatoria, con los ataques Copycat CNN y KnockoffNets. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test\n",
-      "Hola mundo\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'art'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/sergiomarchena/Documents/security data science/proyecto3/main.ipynb Cell 12'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/sergiomarchena/Documents/security%20data%20science/proyecto3/main.ipynb#ch0000012?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mart\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sergiomarchena/Documents/security%20data%20science/proyecto3/main.ipynb#ch0000012?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mart\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mattacks\u001b[39;00m \u001b[39mimport\u001b[39;00m ExtractionAttack\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/sergiomarchena/Documents/security%20data%20science/proyecto3/main.ipynb#ch0000012?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mart\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mattacks\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mextraction\u001b[39;00m \u001b[39mimport\u001b[39;00m CopycatCNN, KnockoffNets\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'art'"
      ]
     }
    ],
    "source": [
-    "print('test')\n",
-    "print('Hola mundo')"
+    "import art\n",
+    "from art.attacks import ExtractionAttack\n",
+    "from art.attacks.extraction import CopycatCNN, KnockoffNets"
    ]
   },
   {
